--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-numpy
-scipy
+numpy~=1.24.3
+scipy~=1.11.1
 IPython
-Pillow
-matplotlib
+Pillow~=10.0.0
+matplotlib~=3.7.2
 scikit-learn
+opencv-python~=4.8.0.74
